<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lastpage"
    tools:context=".Addressbyiitname">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:text="@string/nearest_railway_station"
            android:textColor="#5de6d2"
            android:textSize="26sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/railwayinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/arbutus_slab"
            android:padding="8dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/textview1"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:text="@string/Nearest_airport_station"
            android:textColor="#5de6d2"
            android:textSize="26sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/airportinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/arbutus_slab"
            android:padding="8dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/textview2"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Logoutbutton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:background="@drawable/mybutton"
            android:backgroundTint="@color/black"
            android:onClick="Logout"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textStyle="italic"
            app:iconTint="#F3ECEC" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>