<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frontp"
    tools:context=".frontpage">

<!--    <ImageView-->
<!--        android:id="@+id/imageView2"-->
<!--        android:layout_width="250dp"-->
<!--        android:layout_height="250dp"-->
<!--        android:layout_marginTop="80dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.497"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:srcCompat="@drawable/titleimage"-->
<!--        android:contentDescription="@string/todo" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/searchbutton1"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_marginTop="350dp"
            android:fontFamily="@font/alegreya_sc_bold"
            android:text="@string/search_by_iit_s_name"
            android:textColor="#FCFFFF"
            android:background="@drawable/mybutton"
            android:textSize="19sp"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/searchbutton2"
            android:layout_width="320dp"
            android:layout_gravity="center"
            android:layout_height="55dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/alegreya_sc_bold"
            android:text="@string/search_by_state_name"
            android:textColor="#FFFEFE"
            android:textSize="19sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/feedbackb"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/mybutton"
        android:onClick="givefeedback"
        android:text="@string/give_feedback"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvmessage"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="277dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="45dp"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>